public/css/styles.css
body {
  background: url('images/background.png') repeat-y center top;
  color: white;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.clear {
  clear:both;
}

.homepage-logo {
  display: block;
  margin: 48px auto 12px;
  width: 330px;
}

.homepage-menu {
  margin: 0 auto;
  padding: 0;
  width: 900px;
}

.homepage-menu li {
  display: inline-block;
  font-size: 1.8em;
  font-variant: small-caps;
  font-weight: bold;
  letter-spacing: 1px;
  list-style-type: none;
  margin: 0 18px;
}

.homepage-menu li a {
  text-decoration: none;
}

.homepage-menu li a span {
  color: white;
  display: block;
  text-align: center;
  transition: color 0.4s;
}
.homepage-menu li:hover a span { color: #999; transition: color 0.4s; }

.homepage-menu img {
  width: 150px;
}

.homepage-contact {
  font-variant: small-caps;
  letter-spacing: 1px;
  position: absolute;
  top: 8%;
  right: 4%;
}

.homepage-contact a {
  text-decoration: none;
}

.homepage-contact a span {
  color: white;
  display: block;
  text-align: center;
  transition: color 0.4s;
}
.homepage-contact a:hover span { color: #999; transition: color 0.4s; }

.head-space { height: 24px; }

.top-menu {
  clear: both;
  display: block;
}

.side-menu {
  width: 220px;
  float: left;
}

.logo {
  display: inline;
  width: 210px;
  height: 140px;
}
.top-menu .logo { float: left; }

.top-menu .menu {
  display: block;
  margin: 0 0 0 210px;
  padding: 38px 0 0 40px;
}

.side-menu .menu {
  margin: 16px 0;
  padding: 0 0 0 40px;
}

.menu li {
  display: inline-block;
  font-size: 1.8em;
  font-variant: small-caps;
  font-weight: bold;
  letter-spacing: 1px;
  list-style-type: none;
}
.top-menu .menu li {
  margin: 0 0 12px 64px;
}
.side-menu .menu li {
  margin: 0 0 24px 0;
}

.menu a {
  color: white;
  text-decoration: none;
  transition: color 0.4s;
}

.menu li a:hover {
  color: #999;
  transition: color 0.4s;
}

.left-col {
  float: left;
  width: 45%;
}

.right-col {
  margin-left: 45%;
}

.right-col .info-box {
  max-height: 292px;
  overflow: auto;
}

.content-home { 
  margin: 0 auto; 
  position: relative;
  text-align: center;
  width: 960px; 
}

.content-home p {
  font-family: Georgia, serif;
  font-size: 1.4em;
  margin: 12px auto 60px;
  width: 64%;
}

.content {
  margin-left: 220px;
  width: 960px;
}

.content-header {
  height: 140px;
  margin: 12px 24px;
}

.content-header .info-box {
  padding: 4px; 
}

.content-header h1 {
  font-family: Georgia, serif;
  font-variant: small-caps;
  letter-spacing: 1px;
  text-align: center;
  font-size: 2.4em;
}

.content-main {
  margin: 10px 24px;
}

.content-main .left-col img {
  border: 1px solid #222;
  margin: 0 10%;
  max-height: 300px;
  max-width: 330px;
}

.twocolumn .left-col img, .twocolumn .right-col img {
  border: 1px solid #222;
  margin: 0 10%;
  max-height: 300px;
  max-width: 300px;
}

.twocolumn .left-col, .twocolumn .right-col {
  padding: 0 10px;
}

.twocolumn .left-col { 
  width: 50%;
}

.twocolumn .right-col {
  margin-left: 50%;
}

.info-box {
  background-color: rgb(0, 96, 196);
  background-color: rgba(0, 96, 196, 0.7);
  border-radius: 12px;
  margin: 12px 0;
  padding: 10px;

  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#B20060C4', endColorstr='#B20060C4')";
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#B20060C4, endColorstr=#B20060C4);
}

.info-box h1 {
  font-family: Georgia, serif;
  margin: 4px 0;
}

.info-box p { 
  font-family: "Trebuchet MS", "Helvetica Neue", Helvetica, Arial, sans-serif;
  line-height: 22px;
  margin: 4px 2px 8px;
}

.content-secondary {
  clear: both;
  margin: 18px 24px;
  min-width: 720px;
  max-width: 960px;
}

.content-secondary h1 {
  margin: 0 12px;
}

.secondary-menu {
  padding: 0;
  text-align: center;
}

.secondary-menu li {
  display: inline-block;
  list-style-type: none;
  margin: 0 12px;
  max-width: 164px;
  vertical-align: top;
}

.client-projects li {
  max-width: 120px;
}

.secondary-menu li a {
  text-decoration: none;
}

.secondary-menu li a span {
  color: white;
  display: block;
  font-size: 1.2em;
  margin-top: 4px;
  text-align: center;
  transition: color 0.4s;
}
.secondary-menu li:hover a span { color: #999; transition: color 0.4s; }

.content-secondary img {
  margin: 0 auto;
  max-height: 128px;
}

.product-slider img {
  border: 1px solid #777;
  box-shadow: 0 0 2px #333;
}

.bx-wrapper {
  margin: 0 auto 36px;
}

.bx-wrapper .bx-viewport {
  background: none;
  border: none;
  box-shadow: 0 0 0 #CCC;
  padding: 4px;
}

.bx-wrapper .bx-caption span {
  font-family: "Trebuchet MS", Verdana, "Helvetica Neue", Helvetica, sans-serif;
}

.keyplayers .bx-caption {
  bottom: 0;
  left: auto;
  right: 0;
  width: 270px;
  height: 100%;
}

.keyplayers .bx-caption span {
  position: absolute;
  top: 50%;
  margin-top: -20%;
  font-size: 1em;
}

.keyplayers .bx-wrapper {
  margin: 0 auto;
}

.keyplayers .bx-wrapper .bx-pager {
  position: absolute;
  bottom: 8px;
  left: 16px;
  text-align: left;
  z-index: 1000;
}

.keyplayers-slider {
  margin: 0;
  padding: 0;
}

.team-member {
  border-bottom: 1px solid #666;
}

.executive-photo {
  float: left;
  margin: 12px 5px;
}

.executive-photo img { 
  display: block;
  margin: 0 0 12px;
  max-width: 200px;
}

.executive-info {
  margin-left: 210px;
  padding: 0 12px;
}

.executive-info h2 {
  font-family: Georgia, serif;
  font-weight: bold;
  margin: 4px 0;
}

.executive-info h3 {
  font-style: italic;
  font-family: "Trebuchet MS", Verdana, "Helvetica Neue", sans-serif;
  font-weight: bold;
}

.experience em { 
  display: block;
  margin: 0 0 8px;
  font-family: "Trebuchet MS", Verdana, "Helvetica Neue", sans-serif;
}

